--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -27,9 +27,9 @@
 #   icon: 'fab fa-stack-overflow'
 #   url:  ''                  # Fill with your stackoverflow homepage
 #
-# - type: bluesky
-#   icon: 'fa-brands fa-bluesky'
-#   url: ''                   # Fill with your Bluesky profile link
+- type: bluesky
+  icon: 'fa-brands fa-bluesky'
+  url: 'https://bsky.app/profile/dndpdx.com'
 #
 # - type: reddit
 #   icon: 'fa-brands fa-reddit'
